@@ -62,6 +62,7 @@ if(isset($wgExtraNamespaces)) {
 	'math' 			=> 1,
 	'rcdays' 		=> 7,
 	'rclimit' 		=> 50,
+	'wllimit' 		=> 250,
 	'highlightbroken'	=> 1,
 	'stubthreshold' 	=> 0,
 	'previewontop' 		=> 1,
@@ -135,6 +136,7 @@ $wgDateFormatsEn = array(
 	'highlightbroken',
 	'justify',
 	'hideminor',
+	'extendwatchlist',
 	'usenewrc',
 	'numberheadings',
 	'showtoolbar',
