@@ -36,6 +36,7 @@ parent class in order maintain consistency across languages.
 'tog-highlightbroken' => 'Format broken links <a href="" class="new">like this</a> (alternative: like this<a href="" class="internal">?</a>).',
 'tog-justify'	=> 'Justify paragraphs',
 'tog-hideminor' => 'Hide minor edits in recent changes',
+'tog-extendwatchlist' => 'Enhanced watchlist',
 'tog-usenewrc' => 'Enhanced recent changes (JavaScript)',
 'tog-numberheadings' => 'Auto-number headings',
 'tog-showtoolbar'		=> 'Show edit toolbar (JavaScript)',
@@ -699,6 +700,7 @@ $2 List redirects &nbsp; Search for $3 $9",
 'prefs-rc' => 'Recent changes',
 'prefs-watchlist' => 'Watchlist',
 'prefs-watchlist-days' => 'Number of days to show in watchlist:',
+'prefs-watchlist-edits' => 'Number of edits to show in expanded watchlist:',
 'prefs-misc' => 'Misc',
 'saveprefs'		=> 'Save',
 'resetprefs'	=> 'Reset',
